--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -240,43 +240,15 @@
     }
   }
 
-  &:nth-of-type(1) {
-    &::before {
-      animation-delay: 0s;
-    }
+  @for $i from 1 through 4 {
+    &:nth-of-type(#{$i}) {
+      &::before {
+        animation-delay: 200ms * $i - 200ms;
+      }
 
-    p {
-      animation-delay: 200ms;
-    }
-  }
-
-  &:nth-of-type(2) {
-    &::before {
-      animation-delay: 200ms;
-    }
-
-    p {
-      animation-delay: 400ms;
-    }
-  }
-
-  &:nth-of-type(3) {
-    &::before {
-      animation-delay: 400ms;
-    }
-
-    p {
-      animation-delay: 600ms;
-    }
-  }
-
-  &:nth-of-type(4) {
-    &::before {
-      animation-delay: 600ms;
-    }
-
-    p {
-      animation-delay: 800ms;
+      p {
+        animation-delay: 200ms * $i;
+      }
     }
   }
 
