add: animation text and image for section result prizes

--- a/source/scss/blocks/form.scss
+++ b/source/scss/blocks/form.scss
@@ -81,6 +81,12 @@
 .form__button {
   width: 18rem;
 
+  .result--prize & {
+    @media (min-width: $tablet) and (orientation: landscape) {
+      width: 28rem;
+    }
+  }
+
   @media (orientation: portrait) {
     position: relative;
     flex: none;
