--- a/source/scss/blocks/chat.scss
+++ b/source/scss/blocks/chat.scss
@@ -1,3 +1,27 @@
+.active {
+  .chat__footer {
+    .form__field {
+      width: calc(100% - 21rem);
+
+      &::placeholder {
+        opacity: 1;
+      }
+
+      @media (orientation: portrait) {
+        width: calc(100% - 5rem);
+      }
+
+      @media (max-width: $tablet) and (orientation: landscape) {
+        width: calc(100% - 9rem);
+      }
+
+      @media (max-width: $mobile) and (orientation: landscape) {
+        width: calc(100% - 5rem);
+      }
+    }
+  }
+}
+
 .chat {
   flex-grow: 1;
   display: flex;
@@ -185,6 +209,7 @@
 
 .chat__footer {
   margin-top: auto;
+  position: relative;
 
   .form {
     justify-content: end;
@@ -192,24 +217,11 @@
 
   .form__field {
     width: 10%;
-    transition: width 0.3s ease;
-  }
-}
+    transition: width 0.8s ease-out;
 
-.active {
-  .form__field {
-    width: calc(100% - 21rem);
-
-    @media (orientation: portrait) {
-      width: calc(100% - 5rem);
-    }
-
-    @media (max-width: $tablet) and (orientation: landscape) {
-      width: calc(100% - 9rem);
-    }
-
-    @media (max-width: $mobile) and (orientation: landscape) {
-      width: calc(100% - 5rem);
+    &::placeholder {
+      opacity: 0;
+      transition: opacity 0.4s ease-out 0.55s;
     }
   }
 }
