--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -1,3 +1,10 @@
+.active {
+  .rules__lead {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .rules {
   position: relative;
   flex-grow: 1;
@@ -14,7 +21,7 @@
       animation-name: showBtnRules;
       animation-fill-mode: forwards;
       animation-duration: 500ms;
-      animation-delay: 800ms;
+      animation-delay: 2s;
       animation-timing-function: ease-out;
 
       @media (max-width: $tablet) and (orientation: portrait) {
@@ -28,7 +35,7 @@
       animation-name: showBtnTextRules;
       animation-fill-mode: forwards;
       animation-duration: 400ms;
-      animation-delay: 1.25s;
+      animation-delay: 2.2s;
 
       @media (max-width: $tablet) and (orientation: portrait) {
         opacity: 1;
@@ -103,6 +110,10 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.2;
+  opacity: 0;
+  transform: translateY(30%);
+  transition: all 0.5s ease-in-out 0.8s;
+
 
   @media (min-width: $stop-scaling) {
     margin-left: 58px;
@@ -188,44 +199,6 @@
     font-size: 1.2rem;
   }
 
-  &::before {
-    content: counter(li);
-    counter-increment: li;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 4.5rem;
-    height: 4.5rem;
-    font-family: $font-alt;
-    font-weight: 400;
-    font-size: 2.4rem;
-    background-color: $c-purple;
-    border-radius: 50%;
-    line-height: 5rem;
-    text-align: center;
-    transform: scale(0);
-    animation-name: showBulletRules;
-    animation-duration: 500ms;
-    animation-fill-mode: forwards;
-    animation-timing-function: cubic-bezier(0.34, 1.6, 0.64, 1);
-
-    @media (max-width: $tablet) and (orientation: portrait) {
-      top: 1rem;
-      width: 2.5rem;
-      height: 2.5rem;
-      line-height: 3rem;
-      font-size: 1.4rem;
-    }
-
-    @media (max-width: $mobile) and (orientation: landscape) {
-      top: 0.6rem;
-      width: 2.5rem;
-      height: 2.5rem;
-      line-height: 3rem;
-      font-size: 1.4rem;
-    }
-  }
-
   p {
     margin: 0;
     opacity: 0;
@@ -242,12 +215,16 @@
 
   @for $i from 1 through 4 {
     &:nth-of-type(#{$i}) {
-      &::before {
-        animation-delay: 200ms * $i - 200ms;
+      .rules__char {
+        animation-delay: 200ms * $i - 200ms + 1.3s;
       }
 
       p {
-        animation-delay: 200ms * $i;
+        animation-delay: 200ms * $i + 1.3s;
+      }
+
+      span {
+        animation-delay: 205ms * $i + 1.3s;
       }
     }
   }
@@ -258,10 +235,60 @@
       opacity: 1;
     }
   }
+}
+
+.rules__char {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 4.5rem;
+  height: 4.5rem;
+  font-family: $font-alt;
+  font-weight: 400;
+  font-size: 2.4rem;
+  background-color: $c-purple;
+  border-radius: 50%;
+  line-height: 5rem;
+  text-align: center;
+  transform: scale(0);
+  animation-name: showBulletRules;
+  animation-duration: 500ms;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.34, 1.6, 0.64, 1);
+
+  span {
+    opacity: 0;
+    animation-name: showNumberRules;
+    animation-duration: 300ms;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-in;
+  }
+
+  @media (max-width: $tablet) and (orientation: portrait) {
+    top: 1rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    line-height: 3rem;
+    font-size: 1.4rem;
+  }
+
+  @media (max-width: $mobile) and (orientation: landscape) {
+    top: 0.6rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    line-height: 3rem;
+    font-size: 1.4rem;
+  }
 
   @keyframes showBulletRules {
     to {
       transform: scale(1);
+    }
+  }
+
+  @keyframes showNumberRules {
+    to {
+      opacity: 1;
     }
   }
 }
