--- a/source/scss/blocks/disclaimer.scss
+++ b/source/scss/blocks/disclaimer.scss
@@ -22,6 +22,8 @@
     text-transform: uppercase;
     font-size: 1.2rem;
     line-height: 1.2;
+    opacity: 0;
+    transition: 0.35s ease-out;
 
     @media (min-width: $stop-scaling) {
       font-size: 12px;
@@ -35,6 +37,10 @@
     @media (max-width: $mobile) and (orientation: landscape) {
       font-size: 1rem;
       opacity: 0.5;
+    }
+
+    .active & {
+      opacity: 1;
     }
   }
 
