--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -29,7 +29,7 @@
     min-height: calc(var(--vh, 1vh) * 100);
   }
 
-  @media (max-width: $tablet - 1) and (orientation: landscape) {
+  @media (max-width: #{$tablet - 1}) and (orientation: landscape) {
     height: 100vh;
   }
 }
@@ -329,6 +329,16 @@
 
 .screen--prizes {
   background-color: $c-dark;
+
+  .screen__footer {
+    transform: translateY(100%);
+  }
+
+  &.active {
+    .screen__footer {
+      transform: translateY(0);
+    }
+  }
 }
 
 .screen--game {
