--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -12,8 +12,8 @@
   &:hover {
     .social-block__toggler:not(:hover) {
       &::before {
-        background-color: $c-purple;
-        border-color: $c-purple;
+        background-color: var(--color-hover);
+        border-color: var(--color-hover);
       }
 
       svg {
@@ -52,7 +52,7 @@
   display: block;
   width: 4rem;
   height: 4rem;
-  color: $c-dark;
+  color: var(--color-hover);
   border-radius: 50%;
 
   @media (max-width: $tablet) and (orientation: portrait) {
@@ -85,7 +85,7 @@
 
   &:hover,
   .social-block--active & {
-    color: $c-purple;
+    color: var(--color-hover);
 
     &::before {
       width: 112.5%;
@@ -94,11 +94,11 @@
   }
 
   &:focus {
-    color: $c-purple;
+    color: var(--color-hover);
     outline: none;
 
     &::before {
-      border-color: $c-purple;
+      border-color: var(--color-hover);
     }
 
     & + .social-block__list {
@@ -114,8 +114,8 @@
     &::before {
       width: 100%;
       height: 100%;
-      background-color: $c-purple;
-      border-color: $c-purple;
+      background-color: var(--color-hover);
+      border-color: var(--color-hover);
     }
   }
 }
@@ -226,19 +226,19 @@
   }
 
   &:hover {
-    color: $c-purple;
+    color: var(--color-hover);
   }
 
   &:focus {
-    color: $c-purple;
+    color: var(--color-hover);
     background-color: $c-light;
-    border-color: $c-purple;
+    border-color: var(--color-hover);
     outline: none;
   }
 
   &:active,
   &:active:focus {
-    color: $c-purple;
+    color: var(--color-hover);
     background-color: $c-light;
     border-color: $c-light;
   }
