--- a/source/scss/general/variables.scss
+++ b/source/scss/general/variables.scss
@@ -1,6 +1,9 @@
 $c-light: #ffffff;
 $c-dark: #5f458c;
 $c-purple: #a67ee5;
+$c-blue: #3e72ee;
+$c-blue-2: #a0ceff;
+$c-lite-blue: #90b8e2;
 
 $font: "Proxima Nova", "Arial", sans-serif;
 $font-alt: "Radical",  "Arial", sans-serif;
